feat(api): add jwt
